<resources>
    <string name="app_name">RegisterProject</string>
    <string name="regPageTitle">რეგისტრაცია</string>
    <string name="emailHint">ელ.ფოსტა</string>
    <string name="pwdHint">პაროლი</string>
    <string name="or">ან</string>
    <string name="regiser">დარეგისტრირება</string>
    <string name="login">ავტორიზაცია</string>
    <string name="loginPageTitle">სისტემაში შესვლა</string>
    <string name="goBack">უკან დაბრუნება</string>
    <string name="signIn">ავტორიზაცია</string>
    <string name="forgotPassword">პაროლი დაგავიწყდა?</string>
    <string name="splashScreenImage">App Logo</string>
    <string name="appTitle">Firebase App</string>
    <string name="logOut">გასვლა</string>
    <string name="addButton">დამატება</string>
</resources>